package ru.smarthome.devices.infrastructure.http.controllers;

import org.springframework.web.bind.annotation.RestController;

@RestController
public class ModuleTypeController {
}
