@startuml
title Class Diagram: 

package comnrollers {
    class DeviceTypeController {
        HttpResponse getById(Integer id)
        HttpResponse getAll()
        HttpResponse create()
        HttpResponse update()
        HttpResponse delete(Integer id)
    }

    class DeviceController {
        HttpResponse getById(Integer id)
        HttpResponse getAll()
        HttpResponse create()
        HttpResponse update()
        HttpResponse delete(Integer id)
    }

    class ModuleTypeController {
        HttpResponse getById(Integer id)
        HttpResponse getAll()
        HttpResponse create()
        HttpResponse update()
        HttpResponse delete(Integer id)
    }

    class ModuleController {
        HttpResponse getById(Integer id)
        HttpResponse getAll()
        HttpResponse create()
        HttpResponse update()
        HttpResponse delete(Integer id)
    }
}

package services {
    class DeviceTypeService {
        DeviceTypeDto getById(Integer id)
        List<DeviceType> getAll()
        void create(DeviceTypeDto dto)
        void update(DeviceTypeDto dto)
        void delete(Integer id)
    }

    class DeviceService {
        DeviceDto getById(Integer id)
        List<Device> getAll()
        void create(DeviceDto dto)
        void update(DeviceDto dto)
        void delete(Integer id)
    }

    class ModuleTypeService {
        Device getById(Integer id)
        List<ModuleTypeDto> getAll()
        void create(ModuleTypeDto dto)
        void update(ModuleTypeDto dto)
        void delete(Integer id)
    }

    class ModuleService {
        Device getById(Integer id)
        List<ModuleDto> getAll()
        void create(ModuleDto dto)
        void update(ModuleDto dto)
        void delete(Integer id)
    }
}

package repositories {
    class DeviceTypeRepository {
        DeviceType getById(Integer id)
        List<DeviceType> getAll()
        void save(DeviceType type)
        void delete(Integer id)
    }

    class DeviceRepository {
        Device getById(Integer id)
        List<Device> getAll()
        void save(Device device)
        void delete(Integer id)
    }

    class ModuleTypeRepository {
        ModuleType getById(Integer id)
        List<ModuleType> getAll()
        void save(ModuleType type)
        void delete(Integer id)
    }

    class ModuleRepository {
        Module getById(Integer id)
        List<Module> getAll()
        void save(Module module)
        void delete(Integer id)
    }
}

package domain {
    class DeviceType {
        Integer id
        String title
        String description
        String unit
        String vendor
        String version
    }

    class Device {
        Integer id
        DeviceType type
        Integer houseId
        String location
        String serialNumber
        Enum status
        String unit
     }

    class ModuleType {
        Integer id
        String title
        String description
        String vendor
        String version
        String protocol
    }

    class Module {
        Integer *id
        ModuleType type
        Integer *houseId
        String connection_point
        Enum status
    }

    DeviceTypeController --> DeviceTypeService
    DeviceController --> DeviceService
    ModuleTypeController --> ModuleTypeService
    ModuleController --> ModuleService

    DeviceTypeService --> DeviceTypeRepository
    DeviceService --> DeviceRepository
    ModuleTypeService --> ModuleTypeRepository
    ModuleService --> ModuleRepository

    Device --> DeviceType
    Module --> ModuleType
    Device --> Module
}


@enduml
ntity ModuleType {
    *id : integer <<generated>>
    --
    *title : varchar
    description : varchar
    *vendor : varchar
    *version : varchar
    protocol : varchar
}

entity Module {
    *id : integer <<generated>>
    --
    *type_id : integer
    *house_id : integer
    *connection_point : varchr
    *status: varchar
}
